elements+img added

--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
     <link rel="stylesheet" href="style.css"/>
     <meta charset="utf-8">
     <title>Do IT</title>
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/HaoZgdMRa86baXx7UAsiPMhboEz6dnCBZXxagm30Ljv3u400eyUO-0DB670DjOHTv_Q=w300" />
   </head>
 
   <body>
 
 <header>
+  <img src="http://www.cats.org.uk/images/do-it_logo.png" alt="logo do it"/>
+  <input type="text" name="search" placeholder="Search..">
+  <img id="search" src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698627-icon-111-search-128.png" alt="icon search"/>
 </header>
 
+<section id="conteneur">
+<a class="produits" href=""><img src="http://image.darty.com/informatique/ordinateur_portable-portable/portable/hp_pavilion_15-ab234nf_k1511034160509A_152243627.jpg" alt="ordinateur"/></a>
+<a class="produits" href=""><img src="http://thibault.dussert.free.fr/peripherique/Imp_laser/images/impri.jpg" alt="imprimante"/></a>
+<a class="produits" href=""><img src="http://image.darty.com/informatique/accessoire_portable/disque_dur_portable/samsung_dd2_5_2tb_m3_k1503134096495A_104007331.jpg" alt="disque dur externe"/></a>
+</section>
+
 <footer>
-  <p>Copyright Zozor - Tous droits réservés<br />
-  <a href="#">Me contacter !</a></p>
+  <p>Copyright Do IT - Tous droits réservés
+  <a id="one" href="#">Me contacter !</a></p>
 </footer>
 
 </body>
