description added to each article

--- a/index.html
+++ b/index.html
@@ -24,9 +24,44 @@
 </header>
 
 <section id="conteneur">
-<a class="produits" href=""><img src="http://image.darty.com/informatique/ordinateur_portable-portable/portable/hp_pavilion_15-ab234nf_k1511034160509A_152243627.jpg" alt="ordinateur"/></a>
-<a class="produits" href=""><img src="http://thibault.dussert.free.fr/peripherique/Imp_laser/images/impri.jpg" alt="imprimante"/></a>
-<a class="produits" href=""><img src="http://image.darty.com/informatique/accessoire_portable/disque_dur_portable/samsung_dd2_5_2tb_m3_k1503134096495A_104007331.jpg" alt="disque dur externe"/></a>
+<a id="primero" href="">
+  <img src="http://image.darty.com/informatique/ordinateur_portable-portable/portable/hp_pavilion_15-ab234nf_k1511034160509A_152243627.jpg" alt="ordinateur"/>
+  <p>PC Portable<br>Hp OMEN 17-W207NF<br>En stock<br></p>
+  <ul>
+    <li>Ecran WLED 17,3" Full HD</li>
+    <li>Processeur Intel® Core™ i7-7700HQ</li>
+    <li>RAM 16 Go - 1 To SATA + 256 Go SSD - Carte<br>graphique Nvidia GeForce GTX 1070 8 Go dédiés</li>
+    <li>Windows 10 - HDMI - USB 3.1 - Bluetooth 4.2</li>
+  </ul>
+  <p>1 399,00€</p>
+</a>
+
+<a id="segundo" href=""><img src="http://thibault.dussert.free.fr/peripherique/Imp_laser/images/impri.jpg" alt="imprimante"/>
+<p>Imprimante jet d'encre</p>
+<p>Hp OFFICEJET PRO 8725</p>
+<p>En stock</p>
+<ul>
+  <li>Imprime, scanne, copie et faxe</li>
+  <li>Recto / verso automatique - bac de 250 feuilles</li>
+  <li>Recto / verso automatique - bac de 250 feuilles</li>
+  <li>Technologie WEB et impression à distance</li>
+</ul>
+<p>249,98€</p>
+</a>
+
+<a id="tercero" href=""><img src="http://image.darty.com/informatique/accessoire_portable/disque_dur_portable/samsung_dd2_5_2tb_m3_k1503134096495A_104007331.jpg" alt="disque dur externe"/>
+<p>Disque dur externe</p>
+<p>Samsung D3 Station 4 To</p>
+<p>En stock </p>
+<ul>
+  <li>4 To</li>
+  <li>USB 3.0</li>
+  <li>Samsung Auto Backup</li>
+  <li>Système de protection de données SafetyKey</li>
+</ul>
+<p>188,94€</p>
+</a>
+
 </section>
 
 <footer>
