modif of description

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   </div>
 </header>
 
+<h2>Top des Ventes</h2>
+
 <section id="conteneur">
 <a id="primero" href="">
   <img src="http://image.darty.com/informatique/ordinateur_portable-portable/portable/hp_pavilion_15-ab234nf_k1511034160509A_152243627.jpg" alt="ordinateur"/>
@@ -37,9 +39,7 @@
 </a>
 
 <a id="segundo" href=""><img src="http://thibault.dussert.free.fr/peripherique/Imp_laser/images/impri.jpg" alt="imprimante"/>
-<p>Imprimante jet d'encre</p>
-<p>Hp OFFICEJET PRO 8725</p>
-<p>En stock</p>
+<p>Imprimante jet d'encre<br>Hp OFFICEJET PRO 8725<br>En stock</p>
 <ul>
   <li>Imprime, scanne, copie et faxe</li>
   <li>Recto / verso automatique - bac de 250 feuilles</li>
@@ -50,9 +50,7 @@
 </a>
 
 <a id="tercero" href=""><img src="http://image.darty.com/informatique/accessoire_portable/disque_dur_portable/samsung_dd2_5_2tb_m3_k1503134096495A_104007331.jpg" alt="disque dur externe"/>
-<p>Disque dur externe</p>
-<p>Samsung D3 Station 4 To</p>
-<p>En stock </p>
+<p>Disque dur externe<br>Samsung D3 Station 4 To<br>En stock</p>
 <ul>
   <li>4 To</li>
   <li>USB 3.0</li>
