class added to the description of products

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img src="http://www.cats.org.uk/images/do-it_logo.png" alt="logo do it"/>
   <input id="myInput" name="q" value="Search..." onfocus="this.value = '';" autocomplete="off" type="text" <button type="submit"><img id="search" src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698627-icon-111-search-128.png" alt="loupe"/></button>
   <div id="beneficios">
-  <ul>
+  <ul id="header">
   <li> <img id="truck" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/shipping.jpg" alt="Livraison gratuite à partir de 150 €" width="30" height="30"> </li>
   <li> <p> <em>LIVRAISON GRATUITE</em><br> à partir de 150 € </p> </li>
   <li class="segunda"> <img id="return" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/returns.jpg" alt="Vous avez 15 jours pour Retours" width="30" height="30"> </li>
@@ -28,36 +28,36 @@
 <section id="conteneur">
 <a id="primero" href="">
   <img src="http://image.darty.com/informatique/ordinateur_portable-portable/portable/hp_pavilion_15-ab234nf_k1511034160509A_152243627.jpg" alt="ordinateur"/>
-  <p>PC Portable<br>Hp OMEN 17-W207NF<br>En stock<br></p>
-  <ul>
+  <p class="name">PC Portable<br>Hp OMEN 17-W207NF<br><em>En stock</em><br></p>
+  <ul class="list">
     <li>Ecran WLED 17,3" Full HD</li>
     <li>Processeur Intel® Core™ i7-7700HQ</li>
     <li>RAM 16 Go - 1 To SATA + 256 Go SSD - Carte<br>graphique Nvidia GeForce GTX 1070 8 Go dédiés</li>
     <li>Windows 10 - HDMI - USB 3.1 - Bluetooth 4.2</li>
   </ul>
-  <p>1 399,00€</p>
+  <p class="price">1 399,00€</p>
 </a>
 
 <a id="segundo" href=""><img src="http://thibault.dussert.free.fr/peripherique/Imp_laser/images/impri.jpg" alt="imprimante"/>
-<p>Imprimante jet d'encre<br>Hp OFFICEJET PRO 8725<br>En stock</p>
-<ul>
+<p class="name">Imprimante jet d'encre<br>Hp OFFICEJET PRO 8725<br><em>En stock</em></p>
+<ul class="list">
   <li>Imprime, scanne, copie et faxe</li>
   <li>Recto / verso automatique - bac de 250 feuilles</li>
   <li>Recto / verso automatique - bac de 250 feuilles</li>
   <li>Technologie WEB et impression à distance</li>
 </ul>
-<p>249,98€</p>
+<p class="price">249,98€</p>
 </a>
 
 <a id="tercero" href=""><img src="http://image.darty.com/informatique/accessoire_portable/disque_dur_portable/samsung_dd2_5_2tb_m3_k1503134096495A_104007331.jpg" alt="disque dur externe"/>
-<p>Disque dur externe<br>Samsung D3 Station 4 To<br>En stock</p>
-<ul>
+<p class="name">Disque dur externe<br>Samsung D3 Station 4 To<br><em>En stock</em></p>
+<ul class="list">
   <li>4 To</li>
   <li>USB 3.0</li>
   <li>Samsung Auto Backup</li>
   <li>Système de protection de données SafetyKey</li>
 </ul>
-<p>188,94€</p>
+<p class="price">188,94€</p>
 </a>
 
 </section>
