links added to the products sheets

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <div id="beneficios">
   <ul id="header">
   <li> <img id="truck" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/shipping.jpg" alt="Livraison gratuite à partir de 150 €" width="30" height="30"> </li>
-  <li> <p> <em>LIVRAISON GRATUITE</em><br> à partir de 150 € </p> </li>
+  <li> <p> LIVRAISON GRATUITE<br> à partir de 150 € </p> </li>
   <li class="segunda"> <img id="return" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/returns.jpg" alt="Vous avez 15 jours pour Retours" width="30" height="30"> </li>
-  <li> <p> <em>RETOURS</em><br> Jusqu'à 15 jours </p> </li>
+  <li> <p>RETOURS<br> Jusqu'à 15 jours </p> </li>
   </ul>
   </div>
 </header>
@@ -26,7 +26,7 @@
 <h2>Top des Ventes</h2>
 
 <section id="conteneur">
-<a id="primero" href="">
+<a id="primero" href="index2.html" onclick="window.open(this.href); return false;">
   <img src="http://image.darty.com/informatique/ordinateur_portable-portable/portable/hp_pavilion_15-ab234nf_k1511034160509A_152243627.jpg" alt="ordinateur"/>
   <p class="name">PC Portable<br>Hp OMEN 17-W207NF<br><em>En stock</em><br></p>
   <ul class="list">
@@ -38,7 +38,7 @@
   <p class="price">1 399,00€</p>
 </a>
 
-<a id="segundo" href=""><img src="http://thibault.dussert.free.fr/peripherique/Imp_laser/images/impri.jpg" alt="imprimante"/>
+<a id="segundo" href="index3.html" onclick="window.open(this.href); return false;"><img src="http://thibault.dussert.free.fr/peripherique/Imp_laser/images/impri.jpg" alt="imprimante"/>
 <p class="name">Imprimante jet d'encre<br>Hp OFFICEJET PRO 8725<br><em>En stock</em></p>
 <ul class="list">
   <li>Imprime, scanne, copie et faxe</li>
@@ -49,7 +49,7 @@
 <p class="price">249,98€</p>
 </a>
 
-<a id="tercero" href=""><img src="http://image.darty.com/informatique/accessoire_portable/disque_dur_portable/samsung_dd2_5_2tb_m3_k1503134096495A_104007331.jpg" alt="disque dur externe"/>
+<a id="tercero" href="index4.html" onclick="window.open(this.href); return false;"><img src="http://image.darty.com/informatique/accessoire_portable/disque_dur_portable/samsung_dd2_5_2tb_m3_k1503134096495A_104007331.jpg" alt="disque dur externe"/>
 <p class="name">Disque dur externe<br>Samsung D3 Station 4 To<br><em>En stock</em></p>
 <ul class="list">
   <li>4 To</li>
