--- a/index2.html
+++ b/index2.html
@@ -97,6 +97,11 @@ Vos oreilles ne sont pas en reste, grâce  au système Bang & Olufsen avec deux 
 </aside>
 </section>
 
+<footer>
+  <p>Copyright Do IT - Tous droits réservés
+  <a id="one" href="#">Me contacter !</a></p>
+</footer>
+
   </body>
 
 
