--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
 <footer>
   <p>Copyright Do IT - Tous droits réservés
-  <a id="one" href="#">Me contacter !</a></p>
+    <a id="one" href="index5.html">Contact Us</a>
+    <a href="index6.html">About Us</a></p>
 </footer>
 
 </body>
