link about us & contact us added to the footer

--- a/index2.html
+++ b/index2.html
@@ -99,7 +99,8 @@ Vos oreilles ne sont pas en reste, grâce  au système Bang & Olufsen avec deux 
 
 <footer>
   <p>Copyright Do IT - Tous droits réservés
-  <a id="one" href="#">Me contacter !</a></p>
+    <a id="contact" href="index5.html">Contact Us</a>
+    <a href="index6.html">About Us</a></p>
 </footer>
 
   </body>
