--- a/index5.html
+++ b/index5.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="stylesheet" href="style5.css"/>
     <meta charset="utf-8">
-    <title>Do IT</title>
+    <title>Do IT - About Us</title>
     <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/HaoZgdMRa86baXx7UAsiPMhboEz6dnCBZXxagm30Ljv3u400eyUO-0DB670DjOHTv_Q=w300" />
   </head>
 
@@ -23,10 +23,35 @@
   </div>
 </header>
 
+<section>
+  <h2>Qui sommes-nous?</h2>
+</section>
+
+<section>
+  <article>
+    <p>Nous sommes une entreprise qui se consacre exclusivement au commerce en ligne. Nous gérons des sites d’e-commerce et offrons nos services à des clients uniquement via Internet.
+    <br>
+    Notre philosophie est simple: Excellence du service.
+    En plus de se focaliser pour obtenir les meilleurs prix et produits, nous attachons beaucoup d’importance à la confiance des clients, c'est-à-dire qu’ils se sentent soutenus par nous en cas de problème et qu’ils sachent que nous faisons les choses bien.
+    <br>
+    Notre expérience dans la vente d'équipements informatique se reflète dans le service que nous offrons à nos clients:
+    <br>
+  </p>
+  <ul>
+    <li>Produits 100% originaux</li>
+    <li>Un grand nombre d'articles en stock</li>
+    <li>Envois express</li>
+    <li>Service à la Clientèle avec une réponse immédiate</li>
+    <li>Promotions en cours pour nos abonnés</li>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2529.7105555293647!2d3.169569614990653!3d50.65106508077128!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3283dc4617123%3A0xe4b00570d2cac4bc!2s294+Rue+de+Lannoy%2C+59650+Villeneuve-d&#39;Ascq!5e0!3m2!1sfr!2sfr!4v1490869786743" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </ul>
+</article>
+</section>
+
 <footer>
   <p>Copyright Do IT - Tous droits réservés
-    <a id="one" href="index5.html">Contact Us</a>
-    <a href="index6.html">About Us</a></p>
+    <a id="one" href="index6.html" onclick="window.open(this.href); return false;">Contact Us</a></p>
 </footer>
 
 </body>
