contact and social media added to the contact us page

--- a/index6.html
+++ b/index6.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="stylesheet" href="style6.css"/>
     <meta charset="utf-8">
-    <title>Do IT - About Us</title>
+    <title>Do IT - Contact Us</title>
     <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/HaoZgdMRa86baXx7UAsiPMhboEz6dnCBZXxagm30Ljv3u400eyUO-0DB670DjOHTv_Q=w300" />
   </head>
 
@@ -22,6 +22,37 @@
   </ul>
   </div>
 </header>
+
+<section>
+  <h2>Contactez nous</h2>
+  <h3>Do IT France</h3>
+  </section>
+
+  <h4>Pour contacter le Service Consommateurs</h4>
+    <section>
+      <p>
+  <br>
+    Par Téléphone : 09 69 32 59 59
+    <br>
+    Du Lundi au samedi 8h00 à 21h00
+    <br>
+    (Prix d'un appel non surtaxé)
+  </p>
+</section>
+
+<section>
+  <p>Par E-mail
+    <br>do-it@gmail.com
+    Le délai de prise en charge est de 48h.
+  </p>
+</section>
+
+<section>
+  <p>Retrouver sur les réseaux sociaux en tapant Do-IT
+    <br>
+  <img src="" alt="img twitter"/>
+  <img src="" alt="img facebook"/>
+</p>
 
 <footer>
   <p>Copyright Do IT - Tous droits réservés
