alignment of description/price done

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <input id="myInput" name="q" value="Search..." onfocus="this.value = '';" autocomplete="off" type="text" <button type="submit"><img id="search" src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698627-icon-111-search-128.png" alt="loupe"/></button>
   <div>
   <ul id="header">
-  <li> <img id="truck" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/shipping.jpg" alt="Livraison gratuite à partir de 150 €" width="30" height="30"> </li>
+  <li> <img id="truck" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/shipping.jpg" alt="Livraison gratuite à partir de 150 €"> </li>
   <li> <p>LIVRAISON GRATUITE<br> à partir de 150 € </p> </li>
-  <li> <img id="return" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/returns.jpg" alt="Vous avez 15 jours pour Retours" width="30" height="30"> </li>
+  <li> <img id="return" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/returns.jpg" alt="Vous avez 15 jours pour Retours"> </li>
   <li> <p>RETOURS<br> Jusqu'à 15 jours </p> </li>
   </ul>
   </div>
@@ -38,25 +38,27 @@
   <p class="price">1 399,00€</p>
 </a>
 
-<a id="segundo" href="index3.html" onclick="window.open(this.href); return false;"><img src="http://thibault.dussert.free.fr/peripherique/Imp_laser/images/impri.jpg" alt="imprimante"/>
+<a id="segundo" href="index3.html" onclick="window.open(this.href); return false;">
+  <img src="http://thibault.dussert.free.fr/peripherique/Imp_laser/images/impri.jpg" alt="imprimante"/>
 <p class="name">Imprimante jet d'encre<br>Hp OFFICEJET PRO 8725<br><em>En stock</em></p>
-<ul class="list">
-  <li>Imprime, scanne, copie et faxe</li>
-  <li>Recto / verso automatique - bac de 250 feuilles</li>
-  <li>Recto / verso automatique - bac de 250 feuilles</li>
-  <li>Technologie WEB et impression à distance</li>
-</ul>
+  <ul class="list">
+    <li>Imprime, scanne, copie et faxe</li>
+    <li>Recto / verso automatique - bac de 250 feuilles</li>
+    <li>Recto / verso automatique - bac de 250 feuilles</li>
+    <li>Technologie WEB et impression à distance</li>
+  </ul>
 <p class="price">249,98€</p>
 </a>
 
-<a id="tercero" href="index4.html" onclick="window.open(this.href); return false;"><img src="http://image.darty.com/informatique/accessoire_portable/disque_dur_portable/samsung_dd2_5_2tb_m3_k1503134096495A_104007331.jpg" alt="disque dur externe"/>
+<a id="tercero" href="index4.html" onclick="window.open(this.href); return false;">
+  <img src="http://image.darty.com/informatique/accessoire_portable/disque_dur_portable/samsung_dd2_5_2tb_m3_k1503134096495A_104007331.jpg" alt="disque dur externe"/>
 <p class="name">Disque dur externe<br>Samsung D3 Station 4 To<br><em>En stock</em></p>
-<ul class="list">
-  <li>4 To</li>
-  <li>USB 3.0</li>
-  <li>Samsung Auto Backup</li>
-  <li>Système de protection de données SafetyKey</li>
-</ul>
+  <ul class="list">
+    <li>4 To</li>
+    <li>USB 3.0</li>
+    <li>Samsung Auto Backup</li>
+    <li>Système de protection de données SafetyKey</li>
+  </ul>
 <p class="price">188,94€</p>
 </a>
 
@@ -64,8 +66,8 @@
 
 <footer>
   <p>Copyright Do IT - Tous droits réservés
-    <a id="one" href="index5.html">Contact Us</a>
-    <a href="index6.html">About Us</a></p>
+    <a id="one" href="index6.html" onclick="window.open(this.href); return false;">Contact Us</a>
+    <a href="index5.html" onclick="window.open(this.href); return false;">About Us</a></p>
 </footer>
 
 </body>
