header menu added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
   <li> <p>RETOURS<br> Jusqu'à 15 jours </p> </li>
   </ul>
   </div>
+  <nav>
+    <ul id="menu-deroulant">
+      <li><a href="index.html">Accueil</a></li>
+      <li ><a href="#">Tous nos produits</a>
+        <ul>
+         <li><a href="#">Téléphonie</a></li>
+         <li><a href="#">Objects connectés</a></li>
+         <li><a href="#">Audio, Hifi</a></li>
+         <li><a href="#">Informatique</a></li>
+       </ul>
+     </li>
+     <li><a href="#">Bon plans</a></li>
+     <li><a href="#">Mon panier</a></li>
+    </ul>
+  </nav>
 </header>
 
 <h2>Top des Ventes</h2>
