position button add modified in all pages

--- a/index2.html
+++ b/index2.html
@@ -8,102 +8,100 @@
     <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/HaoZgdMRa86baXx7UAsiPMhboEz6dnCBZXxagm30Ljv3u400eyUO-0DB670DjOHTv_Q=w300" />
   </head>
 
-<body>
+ <body>
   <header>
     <img src="http://www.cats.org.uk/images/do-it_logo.png" alt="logo do it"/>
     <input id="myInput" name="q" value="Search..." onfocus="this.value = '';" autocomplete="off" type="text" <button type="submit"><img id="search" src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698627-icon-111-search-128.png" alt="loupe"/></button>
     <div>
     <ul id="header">
-    <li> <img id="truck" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/shipping.jpg" alt="Livraison gratuite à partir de 150 €" width="30" height="30"> </li>
+    <li> <img id="truck" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/shipping.jpg" alt="Livraison gratuite à partir de 150 €"> </li>
     <li> <p>LIVRAISON GRATUITE<br> à partir de 150 € </p> </li>
-    <li> <img id="return" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/returns.jpg" alt="Vous avez 15 jours pour Retours" width="30" height="30"> </li>
+    <li> <img id="return" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/returns.jpg" alt="Vous avez 15 jours pour Retours"> </li>
     <li> <p>RETOURS<br> Jusqu'à 15 jours </p> </li>
     </ul>
     </div>
   </header>
 
-<section id="first">
-  <img id="ordi" src="http://image.darty.com/informatique/ordinateur_portable-portable/portable/hp_pavilion_15-ab234nf_k1511034160509A_152243627.jpg" alt="ordinateur"/>
-</section>
+  <section id="first">
+    <img id="ordi" src="http://image.darty.com/informatique/ordinateur_portable-portable/portable/hp_pavilion_15-ab234nf_k1511034160509A_152243627.jpg" alt="ordinateur"/>
+  </section>
 
-<section id="one">
-  <p id="first">EN STOCK</p>
-  <article>
-    <p>1 399,00€</p>
-    <button type="button">Ajouter au panier</button>
-  </article>
-</section>
+  <section id="one">
+    <article id="info">
+      <p id="yes">EN STOCK</p>
+      <p>1 399,00€</p>
+    </article>
+      <button type="button">Ajouter au panier</button>
+  </section>
 
-<section id="two">
-  <article>
-  <h3>Description</h3>
-  <p> Omen 17-w207nf par HP : un design exceptionnel et des performances optimales pour le gaming !<br>
-    <br>
-Doté d'un écran WLED Full HD 17,3 pouces et son système Bang et Olufsen intégré, l'ordinateur portable Omen 17-w212nf vous fait vivre une nouvelle expérience unique. Sa conception au design soigné haut de gamme est animée par un processeur dernière génération Intel® Core™ i7, 8 Go de mémoire vive et une carte graphique Nvidia GeForce GTX 1050Ti à 4 Go dédiés.<br>
-<br>
-Un design haut de gamme !<br>
-<br>
-Son  châssis de couleur noire lui donne une  élégance exceptionnelle. Cet aspect premium est lié par  son clavier rétro-éclairé qui vous assure un  grand confort lors de la saisie ou de la navigation.  Vous voilà prêt pour la compétition !<br>
-<br>
-Ecran WLED 17,3" Full HD, Bang & Olufsen: un plaisir pour vos sens !<br>
-<br>
-Avec une  résolution de 1920 x 1080 pixels,  l'écran WLED 17,3 pouces Full HD vous permet de regarder vos films plus facilement ou de vous plonger dans des jeux plus réalistes. Vous bénéficiez d'une  qualité d'image très haute définition qui se traduit à l'écran par  un rendu net et des contrastes saisissants.<br>
-<br>
-Vos oreilles ne sont pas en reste, grâce  au système Bang & Olufsen avec deux haut-parleurs. Profitez à fond du système audio dédié avec  HP Lounge qui vous permet d’écouter de la musique en ligne pendant 1 an</p>
-</article>
-</section>
+  <section id="two">
+    <article>
+      <h3>Description</h3>
+      <p> Omen 17-w207nf par HP : un design exceptionnel et des performances optimales pour le gaming !<br>
+        <br>
+        Doté d'un écran WLED Full HD 17,3 pouces et son système Bang et Olufsen intégré, l'ordinateur portable Omen 17-w212nf vous fait vivre une nouvelle expérience unique. Sa conception au design soigné haut de gamme est animée par un processeur dernière génération Intel® Core™ i7, 8 Go de mémoire vive et une carte graphique Nvidia GeForce GTX 1050Ti à 4 Go dédiés.<br>
+        <br>
+        Un design haut de gamme !<br>
+        <br>
+        Son  châssis de couleur noire lui donne une  élégance exceptionnelle. Cet aspect premium est lié par  son clavier rétro-éclairé qui vous assure un  grand confort lors de la saisie ou de la navigation.  Vous voilà prêt pour la compétition !<br>
+        <br>
+        Ecran WLED 17,3" Full HD, Bang et Olufsen: un plaisir pour vos sens !<br>
+        <br>
+        Avec une  résolution de 1920 x 1080 pixels,  l'écran WLED 17,3 pouces Full HD vous permet de regarder vos films plus facilement ou de vous plonger dans des jeux plus réalistes. Vous bénéficiez d'une  qualité d'image très haute définition qui se traduit à l'écran par  un rendu net et des contrastes saisissants.<br>
+        <br>
+        Vos oreilles ne sont pas en reste, grâce  au système Bang & Olufsen avec deux haut-parleurs. Profitez à fond du système audio dédié avec  HP Lounge qui vous permet d’écouter de la musique en ligne pendant 1 an</p>
+      </article>
+    </section>
 
-  <section id="three">
-<aside>
-  <h3>Caractèristiques</h3>
-  <table>
-     <tr>
-         <td>Modèle du processeur</td>
-         <td>Core™ i7-7700HQ</td>
-     </tr>
-     <tr>
-         <td>Mémoire vive (RAM) installée</td>
-         <td>16 Go</td>
-     </tr>
-     <tr>
-       <td>Taille d'écran (pouces)</td>
-       <td>17,3 ''</td>
-     </tr>
-     <tr>
-       <td>Ports USB 3.0</td>
-       <td>1</td>
-     </tr>
-     <tr>
-       <td>Réseau sans fil</td>
-       <td>Wifi 802.11 ac + Bluetooth 4.2</td>
-     </tr>
-     <tr>
-       <td>Système d'exploitation</td>
-       <td>Windows 10</td>
-     </tr>
-     <tr>
-       <td>Dimensions</td>
-       <td>41,6 x 27,9 x 3,29 cm</td>
-     </tr>
-     <tr>
-       <td>Couleur</td>
-       <td>Noir</td>
-     </tr>
-     <tr>
-       <td>Poids (kg)</td>
-       <td>3,35 kg</td>
-     </tr>
-</table>
-</aside>
-</section>
+    <section id="three">
+      <aside>
+        <h3>Caractèristiques</h3>
+        <table>
+          <tr>
+            <td>Modèle du processeur</td>
+            <td>Core™ i7-7700HQ</td>
+          </tr>
+          <tr>
+            <td>Mémoire vive (RAM) installée</td>
+            <td>16 Go</td>
+          </tr>
+          <tr>
+            <td>Taille d'écran (pouces)</td>
+            <td>17,3 ''</td>
+          </tr>
+          <tr>
+            <td>Ports USB 3.0</td>
+            <td>1</td>
+          </tr>
+          <tr>
+            <td>Réseau sans fil</td>
+            <td>Wifi 802.11 ac + Bluetooth 4.2</td>
+          </tr>
+          <tr>
+            <td>Système d'exploitation</td>
+            <td>Windows 10</td>
+          </tr>
+          <tr>
+            <td>Dimensions</td>
+            <td>41,6 x 27,9 x 3,29 cm</td>
+          </tr>
+          <tr>
+            <td>Couleur</td>
+            <td>Noir</td>
+          </tr>
+          <tr>
+            <td>Poids (kg)</td>
+            <td>3,35 kg</td>
+          </tr>
+        </table>
+      </aside>
+    </section>
 
-<footer>
-  <p>Copyright Do IT - Tous droits réservés
-    <a id="contact" href="index5.html">Contact Us</a>
-    <a href="index6.html">About Us</a></p>
-</footer>
+    <footer>
+      <p>Copyright Do IT - Tous droits réservés
+        <a id="contact" href="index6.html" onclick="window.open(this.href); return false;">Contact Us</a>
+        <a href="index5.html" onclick="window.open(this.href); return false;">About Us</a></p>
+      </footer>
 
   </body>
-
-
-  </html>
+</html>
