--- a/index3.html
+++ b/index3.html
@@ -2,106 +2,104 @@
 <html>
 
   <head>
-    <link rel="stylesheet" href="style2.css"/>
+    <link rel="stylesheet" href="style3.css"/>
     <meta charset="utf-8">
     <title>Do IT</title>
     <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/HaoZgdMRa86baXx7UAsiPMhboEz6dnCBZXxagm30Ljv3u400eyUO-0DB670DjOHTv_Q=w300" />
   </head>
 
-<body>
+ <body>
   <header>
     <img src="http://www.cats.org.uk/images/do-it_logo.png" alt="logo do it"/>
     <input id="myInput" name="q" value="Search..." onfocus="this.value = '';" autocomplete="off" type="text" <button type="submit"><img id="search" src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698627-icon-111-search-128.png" alt="loupe"/></button>
     <div>
-    <ul id="header">
-    <li> <img id="truck" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/shipping.jpg" alt="Livraison gratuite à partir de 150 €" width="30" height="30"> </li>
-    <li> <p>LIVRAISON GRATUITE<br> à partir de 150 € </p> </li>
-    <li> <img id="return" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/returns.jpg" alt="Vous avez 15 jours pour Retours" width="30" height="30"> </li>
-    <li> <p>RETOURS<br> Jusqu'à 15 jours </p> </li>
-    </ul>
+      <ul id="header">
+        <li> <img id="truck" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/shipping.jpg" alt="Livraison gratuite à partir de 150 €"> </li>
+        <li> <p>LIVRAISON GRATUITE<br> à partir de 150 € </p> </li>
+        <li> <img id="return" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/returns.jpg" alt="Vous avez 15 jours pour Retours"> </li>
+        <li> <p>RETOURS<br> Jusqu'à 15 jours </p> </li>
+      </ul>
     </div>
   </header>
 
-<section id="first">
-  <img id="imprim" src="http://thibault.dussert.free.fr/peripherique/Imp_laser/images/impri.jpg" alt="imprimante"/>
-</section>
+  <section id="first">
+    <img id="imprim" src="http://thibault.dussert.free.fr/peripherique/Imp_laser/images/impri.jpg" alt="imprimante"/>
+  </section>
 
-<section id="one">
-  <p id="first">EN STOCK</p>
-  <article>
-    <p>249,98€</p>
+  <section id="one">
+    <article id="info">
+      <p id="yes">EN STOCK</p>
+      <p>249,98€</p>
+    </article>
     <button type="button">Ajouter au panier</button>
-  </article>
-</section>
+  </section>
 
-<section id="two">
-  <article>
-  <h3>Description</h3>
-  <p>HP OfficeJet Pro 8725<br>
-    <br>
-    Répondez aux exigences d'un bureau moderne avec HP Print Forward Design. <br>
-<br>
-Gérez vos coûts grâce à une solution d'impression couleur abordable et de qualité professionnelle.<br>
-<br>
-Restez productif et réduisez la consommation de papier avec l'impression recto verso rapide d'une imprimante conçue pour les gros volumes.<br>
-<br>
-Optez pour un excellent rapport qualité/prix pour tous vos besoins en impression couleur.<br>
-<br>
-Produisez les documents en couleur et en noir et blanc dont vous avez besoin pour assurer la réussite de votre entreprise et économisez jusqu’à 70 % sur vos cartouches d’encre avec HP Instant Ink.<br>
-</article>
-</section>
+  <section id="two">
+    <article>
+      <h3>Description</h3>
+      <p>HP OfficeJet Pro 8725<br>
+        <br>
+        Répondez aux exigences d'un bureau moderne avec HP Print Forward Design. <br>
+        <br>
+        Gérez vos coûts grâce à une solution d'impression couleur abordable et de qualité professionnelle.<br>
+        <br>
+        Restez productif et réduisez la consommation de papier avec l'impression recto verso rapide d'une imprimante conçue pour les gros volumes.<br>
+        <br>
+        Optez pour un excellent rapport qualité/prix pour tous vos besoins en impression couleur.<br>
+        <br>
+        Produisez les documents en couleur et en noir et blanc dont vous avez besoin pour assurer la réussite de votre entreprise et économisez jusqu’à 70 % sur vos cartouches d’encre avec HP Instant Ink.<br>
+    </article>
+  </section>
 
   <section id="three">
-<aside>
-  <h3>Caractèristiques</h3>
-  <table>
-     <tr>
+    <aside>
+      <h3>Caractèristiques</h3>
+      <table>
+        <tr>
          <td>Fonctions</td>
          <td>Imprime, scanne, copie et faxe</td>
-     </tr>
-     <tr>
+        </tr>
+        <tr>
          <td>Connectivité</td>
          <td>USB, WIFI, WIFI DIRECT, ETHERNET</td>
-     </tr>
-     <tr>
-       <td>Cartouche/Toner XL</td>
-       <td>HP 953 / 953 XL</td>
-     </tr>
-     <tr>
-       <td>Poids</td>
-       <td>15 kg</td>
-     </tr>
-     <tr>
-       <td>Capacité bac d'entrée</td>
-       <td>250 feuilles</td>
-     </tr>
-     <tr>
-       <td>Usage</td>
-       <td>Polyvalente</td>
-     </tr>
-     <tr>
-       <td>Technologie d'impression</td>
-       <td>Jet d'encre</td>
-     </tr>
-     <tr>
-       <td>Vitesse d'impression en noir</td>
-       <td>24 pages/min</td>
-     </tr>
-     <tr>
-       <td>Dimensions (LxPxH)</td>
-       <td>41.9 x 49.9 x 31.5 cm</td>
-     </tr>
-</table>
-</aside>
-</section>
+        </tr>
+        <tr>
+          <td>Cartouche/Toner XL</td>
+          <td>HP 953 / 953 XL</td>
+        </tr>
+        <tr>
+          <td>Poids</td>
+          <td>15 kg</td>
+        </tr>
+        <tr>
+          <td>Capacité bac d'entrée</td>
+          <td>250 feuilles</td>
+        </tr>
+        <tr>
+          <td>Usage</td>
+          <td>Polyvalente</td>
+        </tr>
+        <tr>
+          <td>Technologie d'impression</td>
+          <td>Jet d'encre</td>
+        </tr>
+        <tr>
+          <td>Vitesse d'impression en noir</td>
+          <td>24 pages/min</td>
+        </tr>
+        <tr>
+          <td>Dimensions (LxPxH)</td>
+          <td>41.9 x 49.9 x 31.5 cm</td>
+        </tr>
+      </table>
+    </aside>
+  </section>
 
-<footer>
-  <p>Copyright Do IT - Tous droits réservés
-    <a id="contact" href="index5.html">Contact Us</a>
-    <a href="index6.html">About Us</a></p>
-</footer>
+  <footer>
+    <p>Copyright Do IT - Tous droits réservés
+      <a id="contact" href="index6.html" onclick="window.open(this.href); return false;">Contact Us</a>
+      <a href="index5.html" onclick="window.open(this.href); return false;">About Us</a></p>
+  </footer>
 
-  </body>
-
-
-  </html>
+ </body>
+</html>
