--- a/index4.html
+++ b/index4.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <link rel="stylesheet" href="style2.css"/>
+    <link rel="stylesheet" href="style4.css"/>
     <meta charset="utf-8">
     <title>Do IT</title>
     <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/HaoZgdMRa86baXx7UAsiPMhboEz6dnCBZXxagm30Ljv3u400eyUO-0DB670DjOHTv_Q=w300" />
@@ -14,94 +14,74 @@
     <input id="myInput" name="q" value="Search..." onfocus="this.value = '';" autocomplete="off" type="text" <button type="submit"><img id="search" src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698627-icon-111-search-128.png" alt="loupe"/></button>
     <div>
     <ul id="header">
-    <li> <img id="truck" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/shipping.jpg" alt="Livraison gratuite à partir de 150 €" width="30" height="30"> </li>
+    <li> <img id="truck" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/shipping.jpg" alt="Livraison gratuite à partir de 150 €"> </li>
     <li> <p>LIVRAISON GRATUITE<br> à partir de 150 € </p> </li>
-    <li> <img id="return" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/returns.jpg" alt="Vous avez 15 jours pour Retours" width="30" height="30"> </li>
+    <li> <img id="return" src="http://fr.vesira.com/skin/frontend/gravdept/acumen/img/icon/returns.jpg" alt="Vous avez 15 jours pour Retours"> </li>
     <li> <p>RETOURS<br> Jusqu'à 15 jours </p> </li>
     </ul>
     </div>
   </header>
 
-<section id="first">
-  <img id="imprim" src="http://thibault.dussert.free.fr/peripherique/Imp_laser/images/impri.jpg" alt="imprimante"/>
-</section>
+  <section id="first">
+    <img id="dur" src="http://image.darty.com/informatique/accessoire_portable/disque_dur_portable/samsung_dd2_5_2tb_m3_k1503134096495A_104007331.jpg" alt="img disque dur"/>
+  </section>
 
-<section id="one">
-  <p id="first">EN STOCK</p>
-  <article>
-    <p>249,98€</p>
-    <button type="button">Ajouter au panier</button>
-  </article>
-</section>
+  <section id="one">
+    <article>
+      <p id="yes">EN STOCK</p>
+      <p>188,94€</p>
+    </article>
+    <button type="button">Ajouter au panier</button> 
+  </section>
 
-<section id="two">
-  <article>
-  <h3>Description</h3>
-  <p>HP OfficeJet Pro 8725<br>
-    <br>
-    Répondez aux exigences d'un bureau moderne avec HP Print Forward Design. <br>
-<br>
-Gérez vos coûts grâce à une solution d'impression couleur abordable et de qualité professionnelle.<br>
-<br>
-Restez productif et réduisez la consommation de papier avec l'impression recto verso rapide d'une imprimante conçue pour les gros volumes.<br>
-<br>
-Optez pour un excellent rapport qualité/prix pour tous vos besoins en impression couleur.<br>
-<br>
-Produisez les documents en couleur et en noir et blanc dont vous avez besoin pour assurer la réussite de votre entreprise et économisez jusqu’à 70 % sur vos cartouches d’encre avec HP Instant Ink.<br>
-</article>
-</section>
+  <section id="two">
+    <article>
+      <h3>Description</h3>
+      <p>Samsung D3 Station 4 To</p>
+      <ul>
+        <li>Capacité disque dur: 4000 Go</li>
+        <li>Interface du disque dur: USB 3.0</li>
+        <li>Disque dur. taille: 8,89 cm (3.5")</li>
+        <li>Connectivité: Avec fil</li>
+        <li>Version USB: 3.0</li>
+        <li>Taux de transfert de données: 5000 Mbit/s</li>
+        <li>Couleur: Noir</li>
+        <li>Largeur: 12,92 cm</li>
+        <li>Profondeur: 18,06 cm</li>
+        <li>Hauteur: 4,7 cm</li>
+        <li>Câbles inclus: USB</li>
+        <li>Largeur du colis: 22,56 cm</li>
+      </ul>
+    </article>
+  </section>
 
   <section id="three">
-<aside>
-  <h3>Caractèristiques</h3>
-  <table>
-     <tr>
-         <td>Fonctions</td>
-         <td>Imprime, scanne, copie et faxe</td>
-     </tr>
-     <tr>
-         <td>Connectivité</td>
-         <td>USB, WIFI, WIFI DIRECT, ETHERNET</td>
-     </tr>
-     <tr>
-       <td>Cartouche/Toner XL</td>
-       <td>HP 953 / 953 XL</td>
-     </tr>
-     <tr>
-       <td>Poids</td>
-       <td>15 kg</td>
-     </tr>
-     <tr>
-       <td>Capacité bac d'entrée</td>
-       <td>250 feuilles</td>
-     </tr>
-     <tr>
-       <td>Usage</td>
-       <td>Polyvalente</td>
-     </tr>
-     <tr>
-       <td>Technologie d'impression</td>
-       <td>Jet d'encre</td>
-     </tr>
-     <tr>
-       <td>Vitesse d'impression en noir</td>
-       <td>24 pages/min</td>
-     </tr>
-     <tr>
-       <td>Dimensions (LxPxH)</td>
-       <td>41.9 x 49.9 x 31.5 cm</td>
-     </tr>
-</table>
-</aside>
-</section>
+    <aside>
+      <h3>Caractèristiques</h3>
+      <table>
+        <tbody>
+          <tr>
+            <td>Type</td>
+            <td>MAJ</td>
+          </tr>
+          <tr>
+            <td>Code</td>
+            <td>MK1870024603</td>
+          </tr>
+          <tr>
+            <td>Les points forts</td>
+            <td>4 To<br>USB 3.0<br>Samsung Auto Backup<br>Système de protection de données SafetyKey</td>
+          </tr>
+        </tbody>
+      </table>
+    </aside>
+  </section>
 
-<footer>
-  <p>Copyright Do IT - Tous droits réservés
-    <a id="contact" href="index5.html">Contact Us</a>
-    <a href="index6.html">About Us</a></p>
-</footer>
+  <footer>
+    <p>Copyright Do IT - Tous droits réservés
+      <a id="contact" href="index6.html" onclick="window.open(this.href); return false;">Contact Us</a>
+      <a href="index5.html" onclick="window.open(this.href); return false;">About Us</a></p>
+  </footer>
 
-  </body>
-
-
-  </html>
+ </body>
+</html>
